--- a/02-CSS/Flex_our_blocks/style.css
+++ b/02-CSS/Flex_our_blocks/style.css
@@ -11,21 +11,27 @@
     height: 300px;
     width: 200px;
     background-color: blue;
+    margin:15px;
 }
 .main {
     height: 400px;
     width: 700px;
     background-color: red;
+    margin:15px;
 }
 .sub-content {
     height: 200px;
     width: 210px;
     background-color: yellow;
+    margin:10px;
+    flex:1;
 }
 #advertisement {
     height: 120px;
     width: 660px;
     background-color: purple;
+    flex:1;
+    margin:10px;
 }
 .row {
     display:flex;
