--- a/02-CSS/Profile_Page/style.css
+++ b/02-CSS/Profile_Page/style.css
@@ -2,6 +2,7 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+    font-family:Arial, Helvetica, sans-serif
 }
 
 body{
@@ -11,7 +12,7 @@ body{
 .NavBar{
     display:flex;
     justify-content:space-between;
-    padding: 5px 70px;
+    padding: 5px 60px;
     background-color: black;
 }
 
@@ -44,13 +45,13 @@ body{
 }
 
 .content{
-    padding: 30px 70px;
+    padding: 30px 60px;
     display:flex;
     ;
 }
 
 .col-1{
-    border:3px solid black;
+    /* border:3px solid black; */
     flex:2;
     height:900px;
     margin-right: 20px;
@@ -115,20 +116,172 @@ body{
 
 .school{
     height:200px;
-    border: 2px solid yellow;
+    padding-top:40px;
+    /* border: 2px solid yellow; */
 }
 .edu{
-    border:2px solid green;
-    height: 30px;
+    /* border:2px solid green;*/
+    height: 40px;
     background-color:rgb(51,51,51); 
     color:white;
+    display:flex;
+    align-items:center;
 }
 
+.edu h4{
+    margin-left:20px;
+    font-size:17px;
+}
 .eduInfo{
     border: 4px solid lightgray;
     height:300px;
 }
+
+.eduInfo p{
+    padding-left:20px;
+}
+
+#ln-1{
+    font-size: 20px;
+    padding-top:10px;
+}
+#ln-2{
+    font-size: 17px;
+    color:gray;
+    padding-top:4px;
+}
+
+#ln-3{
+    font-size: 15px;
+    padding-top:6px;
+}
 .col-2{
-    border:3px solid black;
+    /* border:3px solid black; */
     flex:1;
+}
+
+.request{
+    height:45px;
+    /* border: 2px solid yellow; */
+}
+
+.req-title{
+    height: 45px;
+    background-color:rgb(51,51,51); 
+    color:white;
+    display:flex;
+    align-items:center;
+}
+
+#accept{
+    height:30px;
+    width:30px;
+    justify-content: space-between;
+    margin-left:5px;
+    margin-right:7px;
+
+}
+
+.req-title h4{
+    font-size:15px;
+}
+.req-body{
+    border:3px solid lightgray;
+}
+.pep-req{
+    /* border:3px solid green; */
+    height:50px;
+    display:flex;
+    align-items: center;
+    padding:5px;
+    margin-top:8px;
+    justify-content: space-between;
+}
+#pep-pic{
+    height:30px;
+    width:30px;
+    border-radius: 50%;
+    border:1px double black;
+    background-color:black;
+    
+    
+}
+#pep-name{
+    padding-right:25px;
+    margin-left:3px;
+    font-size:15px;
+    
+}
+#yes{
+    height:25px;
+    width:25px;
+}
+#no{
+    height:25px;
+    width:25px;
+}
+
+.connect{
+   
+    /* border: 2px solid yellow;
+    height: 400px; */
+    margin-top: 40px;
+}
+
+.con-title{
+    height: 45px;
+    background-color:rgb(51,51,51); 
+    color:white;
+    display:flex;
+    align-items:center;
+}
+
+#amount{
+    height:30px;
+    width:50px;
+    justify-content: space-between;
+    margin-left:5px;
+    margin-right:7px;
+
+}
+
+.con-title h4{
+    font-size:15px;
+}
+
+.con-body{
+    border:3px solid lightgray;
+    height:260px;
+}
+.pep-list{
+    /* border:3px solid green; */
+    height:50px;
+    display:flex;
+    align-items: center;
+    
+    padding:5px;
+    margin-top:3px;
+    
+    
+}
+#con-pic{
+    height:30px;
+    width:30px;
+    border-radius: 50%;
+    border:1px double black;
+    background-color:black;
+    margin:5px;
+}
+
+
+.more{
+    border-top:3px solid lightgray;
+    height:40px;
+    display:flex;
+    align-items: center;
+    padding-left:10px;
+    
+}
+.more a{
+    color:blue;
 }
